# FINMAN

./: .gitignore  CLAUDE.md  README.md
agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
agent/.claude/: settings.local.json
agent/.streamlit/: config.toml
agent/graph/: graph.py  state.py
agent/graph/nodes/: clarifier.py  data_fetcher.py  schema_scanner.py  sql_generator.py  visualizer.py
agent/tools/: supabase_client.py  viz_tools.py
agent/utils/: schema_annotations.py  schema_utils.py
data_model/dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml.example
data_model/dbt/models/marts/: _marts.yml  agg_balance_over_time.sql  agg_daily_cashflow.sql  agg_expense_trends.sql  agg_monthly_cashflow.sql  agg_period_summaries.sql  fct_transactions.sql
data_model/dbt/models/staging/: _sources.yml  _staging.yml  stg_bank_statements.sql  stg_transactions.sql
data_model/dbt/seeds/: transaction_categories.csv
terraform/: .gitignore  main.tf  outputs.tf  startup.sh.tpl  terraform.tfvars.example  variables.tf
