[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "supabase>=2.28.3",
    "psycopg2-binary>=2.9.9",
    "pillow>=12.1.1",
]
